--- a/app/views/water/v7public/country.html
+++ b/app/views/water/v7public/country.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -20,7 +28,7 @@
                 Is the planned project in England?
               </h1>
             </legend>
-            <br><br>
+
             <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="country" name="country" type="radio" value="yes" data-aria-controls="conditional-country-postcode" {{ checked("country", "yes") }}>
@@ -47,28 +55,22 @@
             </div>
           </fieldset>
         </div>
-        <br><br>
+
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-          class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-        >
-          Back to summary page
-        </button>
-        {% endif %}
+
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
+    <div class="govuk-grid-column-one-third ">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m">Eligibility</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
+        <h3 class="govuk-heading-s">Eligibility</h3>
+        <div class="govuk-body govuk-!-font-size-19">
            <p>This grant is only for projects in England.</p>
-           <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
+           <p>Scotland, Wales and Northern Ireland have other grants available.</p>
         </div>
-      </aside>    
+      </aside>
     </div>
   </div>
-</main>  
+
 
 {% endblock %}
