--- a/app/views/water/v7public/grant.html
+++ b/app/views/water/v7public/grant.html
@@ -5,6 +5,14 @@ Potential grant funding
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -19,24 +27,15 @@ Potential grant funding
 
     {% set grantAmount = data['project-cost'] * 0.4 %}
 
-    <p class="govuk-body">You may be able to apply for a grant of up to <strong>£{{ grantAmount | toFixed(2) | commafy }}</strong>, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
-    <div class="govuk-inset-text  govuk-!-margin-bottom-9">
-      The project is not guaranteed to receive a grant.
-    </div>
+    <p class="govuk-body">You may be able to apply for a grant of up to £{{ grantAmount | toFixed(2) | commafy }}, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
+    {{ govukWarningText({
+        text: 'There’s no guarantee the project will receive a grant.',
+        iconFallbackText: 'Warning'
+    }) }}
 
     <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-
-      {% if data['COMPLETED'] == true %}
-      <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-        class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-      >
-        Back to summary page
-      </button>
-    {% endif %}
-
-
     </form>
 
 
