--- a/app/views/water/v7public/irrigation-systems.html
+++ b/app/views/water/v7public/irrigation-systems.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<mian class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -17,12 +25,12 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-padding-top-2">
               <h1 class="govuk-fieldset__heading">
-                Will your irrigation system change? 
+                Will your irrigation system change?
               </h1>
             </legend>
           <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
             What systems are currently used to irrigate?
-            <span class="govuk-caption-m">Select one or two options</span>
+            <span class="govuk-caption-m">Select up to 2 options</span>
             <br>
            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -76,7 +84,7 @@
           <fieldset class="govuk-fieldset">
             <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
                 What systems will be used to irrigate?
-               <span class="govuk-caption-m">Select one or two options</span>
+               <span class="govuk-caption-m">Select up to 2 options</span>
               <br>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
@@ -122,7 +130,7 @@
                   </label>
                 </div>
               </div>
-            </div>  
+            </div>
           </fieldset>
         </div>
         <br>
@@ -134,22 +142,22 @@
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
             class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
     </div>
-</main>
+
 {% endblock %}
