--- a/app/views/water/v7public/tenancy-length.html
+++ b/app/views/water/v7public/tenancy-length.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="tenancy">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="tenancy-length-answer" method="post">
@@ -17,10 +25,10 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have a tenancy agreement until 2026 or after? 
+                Do you have a tenancy agreement until 2027 or after?
               </h1>
             </legend>
-            <br><br>
+            
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
@@ -37,24 +45,18 @@
             </div>
           </fieldset>
         </div>
-        <br>
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='tenancy-length-answer-completed'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
+
       </form>
     </div>
-  <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+  <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-          <h3 class="govuk-heading-m"> Eligibility </h3>
-          <p>The land must be owned or have a tenancy in place until 2026 <br> before starting the project.</p>
-      </aside>    
+          <h3 class="govuk-heading-s"> Eligibility </h3>
+          <p>The land must be owned or have a tenancy in place until 2027 <br> before starting the project.</p>
+      </aside>
   </div>
   </div>
-</main>
+
 {% endblock %}
