--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -45,8 +45,8 @@
                                     <span class="govuk-body govuk-!-font-size-14"># Last updated on 12 October 2021<br/>
                                     </span></p>
                                 <p class='govuk-list app-list--definition'>
-                                  <a href='/water/v7public/guidance' class="govuk-link--no-visited-state">Version 7 (public beta)</a><br>
-                                        Last version that was tested with users.</p>
+                                  <a href='/water/v7public/guidance' class="govuk-link--no-visited-state">Version 8 (public beta)</a><br>
+                                        Last version that was tested with users. Recently updated in line with live version. Published: 6 October 2022</p>
                                 <p class='govuk-list app-list--definition'>
                                     <a href='/water/v7private/guidance-all-grants' class="govuk-link--no-visited-state">Version 7 (private beta)</a><br>
                                         This version was tested with internal users.</p>
