--- a/app/views/water/v7public/country-fail.html
+++ b/app/views/water/v7public/country-fail.html
@@ -19,9 +19,9 @@
 
       <p>This grant is only for projects in England.</p>
 
-      <p>Scotland, Wales and Northern Ireland have other grants available.</p>
-
-      <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
+      {{ govukInsetText({
+          text: 'Scotland, Wales and Northern Ireland have other grants available.'
+      }) }}
 
     </div>
   </div>
