--- a/app/views/water/v7public/irrigated-land.html
+++ b/app/views/water/v7public/irrigated-land.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -22,7 +30,7 @@
                 <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-3">
                 How much land is currently irrigated per year?
                 <p id="irrigated-land-current-hint" class="govuk-hint">
-                  Enter figure in hectares, for example 543.5
+                  Enter figure in hectares (ha), for example 543.5
                 </p>
                 </div>
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-8">
@@ -32,15 +40,15 @@
                 <div class="govuk-body govuk-!-margin-bottom-0">
                    How much land will be irrigated per year after the project?
                   <p id="irrigated-land-target-hint" class="govuk-hint">
-                    Enter figure in hectares, for example 543.5
+                    Enter figure in hectares (ha), for example 543.5
                   </p>
                 </div>
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-7">
                   <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
                     <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
-         
-        
+
+
               <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
                 Continue
               </button>
@@ -49,23 +57,23 @@
                 <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
                   class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
                 >
-                  Back to summary page
+                  Back to score
                 </button>
               {% endif %}
-            </div>   
-        </form>                     
-    </div> 
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+            </div>
+        </form>
+    </div>
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                       <li>improve productivity</li>
                    </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
   </div>
-</main>  
+
 
 {% endblock %}
