--- a/app/views/water/v7public/irrigation-water-source.html
+++ b/app/views/water/v7public/irrigation-water-source.html
@@ -5,12 +5,20 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
 
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -23,7 +31,7 @@
             </legend>
             <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
             Where does your current irrigation water come from?
-            <span class="govuk-hint">Select one or two options</span>
+            <span class="govuk-hint">Select up to 2 options</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -64,7 +72,7 @@
           <fieldset class="govuk-fieldset">
           <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
              Where will the irrigation water come from?
-            <span class="govuk-hint">Select one or two options</span>
+            <span class="govuk-hint">Select up to 2 options</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -109,32 +117,32 @@
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
             class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
 
 
       </form>
   </div>
-  <div class="govuk-grid-column-one-third govuk-!-padding-5">
+  <div class="govuk-grid-column-one-third ">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
 
-            RPA will not fund projects where water is supplied by:    
+            RPA will not fund projects where water is supplied by:
             <ul>
               <li>summer water surface abstraction</li>
               <li>mains</li>
-            </ul> 
-        </div>         
-      </aside>   
+            </ul>
+        </div>
+      </aside>
   </div>
   </div>
-</main>  
+
 
 {% endblock %}
