--- a/app/views/water/v7public/legal-status.html
+++ b/app/views/water/v7public/legal-status.html
@@ -5,11 +5,18 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -20,7 +27,7 @@
                 What is the legal status of the farm business?
               </h1>
             </legend>
-            <br><br>
+
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-1" name="legal-status" type="radio" value="Sole trader" {{ checked("legal-status", "Sole trader") }}>
@@ -61,7 +68,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
-                  Community interest company  
+                  Community interest company 
                 </label>
               </div>
               <div class="govuk-radios__item">
@@ -73,21 +80,22 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-11" name="legal-status" type="radio" value="Industrial and provident society" {{ checked("legal-status", "Industrial and provident society") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-11">
-                  Industrial and provident society 
+                  Industrial and provident society
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-12" name="legal-status" type="radio" value="Co-operative society" {{ checked("legal-status", "Co-operative society") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-12">
-                  Co-operative society (Co-Op) 
+                  Co-operative society (Co-Op)
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-13" name="legal-status" type="radio" value="Community benefit society" {{ checked("legal-status", "Community benefit society") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-13">
-                  Community benefit society (BenCom) 
+                  Community benefit society (BenCom)
                 </label>
               </div>
+              <div class="govuk-radios__divider">or</div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-14" name="legal-status" type="radio" value="None" {{ checked("legal-status", "None") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-14">
@@ -97,27 +105,20 @@
             </div>
           </fieldset>
         </div>
-        <br><br>
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
 
 
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m">Eligibility</h3>
+        <h3 class="govuk-heading-s">Eligibility</h3>
         <p class="govuk-body">Public organisations and local authorities cannot apply for this grant.</p>
-      </aside>     
+      </aside>
     </div>
   </div>
-</main>  
+
 
 {% endblock %}
