--- a/app/views/water/v7public/project-cost.html
+++ b/app/views/water/v7public/project-cost.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -21,12 +29,13 @@
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
-            You can only apply for a grant of up to 40% of the estimated costs. Do not include VAT.
+            You can only apply for a grant of up to 40% of the estimated costs. <br>
+            Do not include VAT.
           </div>
           <br>
           <div class="govuk-body">
-           Pounds
-          <span class="govuk-caption-m">For example 95000</span>
+
+          <span class="govuk-caption-m">Enter amount, for example 95000</span>
           <div class="govuk-input__wrapper govuk-!-margin-top-4">
           <span  class="govuk-input__prefix" aria-hidden="true">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
           </div>
@@ -35,22 +44,13 @@
         <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
-
-
-      </form>
+    </form>
 
     </div>
     <div class="govuk-grid-column-one-third">
 
       <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
+        <h2 class="govuk-heading-s" id="subsection-title">
           Items selected
         </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
