--- a/app/views/water/v7public/project-start.html
+++ b/app/views/water/v7public/project-start.html
@@ -5,11 +5,19 @@ Have you already started work on the project?
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -20,24 +28,30 @@ Have you already started work on the project?
               Have you already started work on the project?
             </h1>
           </legend>
-          <br><br>
+
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="preparatory work" {{ checked("project-start", "preparatory work") }}>
               <label class="govuk-label govuk-radios__label" for="project-start-2">
-                Yes, preparatory work (for example quotes from suppliers, applying for planning permission) 
+                Yes, preparatory work
               </label>
+              <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                For example, quotes from suppliers, applying for planning permission
+              </div>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" {{ checked("project-start", "project work") }}>
               <label class="govuk-label govuk-radios__label" for="project-start-2">
-                Yes, we have begun project work (for example digging, signing contracts, placing orders) 
+                Yes, we have begun project work
               </label>
+              <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                For example, digging, signing contracts, placing orders
+              </div>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="No" {{ checked("project-start", "No") }}>
               <label class="govuk-label govuk-radios__label" for="project-start">
-                 No
+                   No, we have not done any work on this project yet
               </label>
             </div>
           </div>
@@ -45,27 +59,21 @@ Have you already started work on the project?
       </div>
       <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
-      {% if data['COMPLETED'] == true %}
-        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-          class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
-        >
-          Back to summary page
-        </button>
-      {% endif %}
+
     </form>
   </div>
-   <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+   <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Eligibility </h3>
+        <h3 class="govuk-heading-s"> Eligibility </h3>
         <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
         <p>Before you start the project, you can:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>get quotes from suppliers</li>
             <li>apply for planning permission or an abstraction licence (these can take a long time)</li>
         </ul>
-      </aside>    
+      </aside>
   </div>
 </div>
-</main>
+
 
 {% endblock %}
