--- a/app/views/water/v7public/remaining-costs-fail.html
+++ b/app/views/water/v7public/remaining-costs-fail.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="remaining-costs">Back</a>
 {% endblock %}
 
@@ -18,8 +26,11 @@
       </h1>
 
       <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
-        
-      <p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p>
+      {{ govukInsetText({
+        html: '<p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p>
+      '
+      }) }}
+
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" target="_blank" class="govuk-!-font-size-19">
          See other grants you may be eligible for.
