--- a/app/views/water/v7public/tenancy.html
+++ b/app/views/water/v7public/tenancy.html
@@ -5,12 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
 
-<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -21,7 +28,7 @@
                 Is the planned project on land the farm business owns?
               </h1>
             </legend>
-            <br><br>
+
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy" name="tenancy" type="radio" value="Yes" {{ checked("tenancy", "Yes") }}>
@@ -38,25 +45,18 @@
             </div>
           </fieldset>
         </div>
-        <br>
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-          <h3 class="govuk-heading-m"> Eligibility </h3>
-          <p> The land must be owned or have a tenancy in place until 2026 <br> before starting the project.</p>
+          <h3 class="govuk-heading-s"> Eligibility </h3>
+          <p> The land must be owned or have a tenancy in place until 2027 <br> before starting the project.</p>
       </aside>
     </div>
   </div>
-</main>  
+
 
 {% endblock %}
